Continuing to add functionality/learn react

--- a/react-weather/src/index.css
+++ b/react-weather/src/index.css
@@ -3,7 +3,7 @@ body {
   font-family: "Roboto", Arial !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: coral
+  background-color: #20b2aa;
 }
 
 code {
