--- a/react-weather/src/components/current-weather/current-weather.css
+++ b/react-weather/src/components/current-weather/current-weather.css
@@ -3,5 +3,30 @@
     border-radius: 8px;
     box-shadow: 15px -3px 20px 3px rgb( 0 0 0 /40%);
     background-color:#00ffff;
-    margin: 20px auto 20px auto;
+    margin: 20px auto 0 auto;
+    padding: 0 20px 20px 20px;
+}
+
+.top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.city {
+    font-weight: 600px;
+    font-size: 18px;
+    margin: 0;
+
+
+}
+
+.weather-description {
+    font-weight: 400;
+    font-size: 14px;
+    margin: 0;
+}
+
+.weather-icon {
+    width: 100px;
 }
